--- a/views/admin_addUser.ejs
+++ b/views/admin_addUser.ejs
@@ -11,11 +11,11 @@
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 mb-3 border-bottom">
                 <h1 class="h2">Add User</h1>
             </div>
-                <% if(status == 200) {%>
+                <% if(status === 200) {%>
                     <div class="card bg-success" >
                         <div class="card-body">success</div>
                     </div>
-                <% } else if (status == 100) { %>
+                <% } else if (status === 400) { %>
                     <div class="card text-light bg-danger">
                         <div class="card-body">Failed, username already exists</div>
                     </div>
