--- a/views/user_sidebar.ejs
+++ b/views/user_sidebar.ejs
@@ -19,6 +19,15 @@
               Profile
             </a>
           </li>
+          <li class="nav-item">
+            <form method="POST" action="/graphinfo/piechartdata">
+              <h1 class="h4">Date Filter</h1>
+              <div class="form-group">
+                <input type="date" class="form-control" name="datefilter">
+              </div>
+              <button class="btn btn-primary col-12 mt-2">Filter</button>
+            </form> 
+          </li>
         <!-- 
         <li class="nav-item">
           <a class="nav-link" href="#">
