--- a/views/admin_sidebar.ejs
+++ b/views/admin_sidebar.ejs
@@ -13,6 +13,17 @@
             Add User
           </a>
         </li>
+        <% if (filter) { %>
+          <li class="nav-item">
+            <form onsubmit="getfiltereddata()" >
+              <h1 class="h4">Date Filter</h1>
+              <div class="form-group">
+                <input type="date" class="form-control" name="datefilter" id="datefilter">
+              </div>
+              <button class="btn btn-primary col-12 mt-2">Filter</button>
+            </form> 
+          </li>
+        <% } %>
         <!-- 
         <li class="nav-item">
           <a class="nav-link" href="#">
