--- a/views/admin_user_filtered.ejs
+++ b/views/admin_user_filtered.ejs
@@ -44,7 +44,7 @@
     const date1=list.pop(); 
     const uid=list.pop();
     console.log(uid,date1);
-    axios.post("http://localhost:3000/graphinfo/userdata/"+uid+"/"+date1,{
+    axios.post("https://workmapv2.herokuapp.com/graphinfo/userdata/"+uid+"/"+date1,{
         date:date1,
         id:uid,
     }).then((response)=>{
@@ -53,7 +53,7 @@
     });
 
     async function switchtoggle() {
-       let response=await fetch("http://localhost:3000/admin/userToggle",{method:"POST",mode:"cors",body:JSON.stringify({id:uid}),headers:{"Content-Type":"application/json"}});
+       let response=await fetch("https://workmapv2.herokuapp.com/admin/userToggle",{method:"POST",mode:"cors",body:JSON.stringify({id:uid}),headers:{"Content-Type":"application/json"}});
        var obj=await response.json();
        if(obj.status==200){
             window.location.reload();
@@ -72,7 +72,7 @@
             date: document.getElementById("datefilter").value
         }
         setTimeout(function(){
-            window.location.href = 'http://localhost:3000/graphinfo/filteradmin/'+uid+"/"+document.getElementById("datefilter").value;
+            window.location.href = 'https://workmapv2.herokuapp.com/graphinfo/filteradmin/'+uid+"/"+document.getElementById("datefilter").value;
             }, 1);
 
         
