--- a/views/passwdChange_success.ejs
+++ b/views/passwdChange_success.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <script>
             setTimeout(function(){
-               window.location.href = 'http://localhost:3000/login';
+               window.location.href = 'https://workmapv2.herokuapp.com/login';
             }, 3000);
          </script>
          <div class="card bg-success col-12" >
