--- a/views/user_addTask.ejs
+++ b/views/user_addTask.ejs
@@ -3,6 +3,7 @@
 
 <%- include('navbar') -%>
 
+
 <div class="container-fluid">
     <div class="row">
         <%- include('user_sidebar') -%>
@@ -34,7 +35,7 @@
                 </div>
                 <div class="from-group">
                     <label for="start_time" ></label>
-                    <input type="datetime-local" name="start_time" class="form-control" id="start_time" max="{new Date().toISOString().split('T')[0]}" required>
+                    <input type="datetime-local" name="start_time" class="form-control" id="start_time"  required>
                 </div>
                 <div class="from-group">
                     <label for="time_taken" ></label>
@@ -47,7 +48,10 @@
         </main>
     </div>
     
-    
+    <script>
+        var today = new Date().toISOString().split('T')[0];
+        document.getElementsById("start_time")[0].setAttribute('max', today);
+    </script>
 </div>
 
 <%- include("p_footer.ejs")-%>
