--- a/views/user_addTask.ejs
+++ b/views/user_addTask.ejs
@@ -50,7 +50,7 @@
     
     <script>
         var today = new Date().toISOString().split('T')[0];
-        document.getElementsById("start_time")[0].setAttribute('max', today);
+        document.getElementById("start_time").setAttribute('max', today);
     </script>
 </div>
 
