--- a/views/user_addTask.ejs
+++ b/views/user_addTask.ejs
@@ -1,8 +1,21 @@
 <%- include("p_header.ejs")-%>
 
 <script>
-    var today = new Date().toISOString().split('T')[0];
-    document.getElementById("start_time").setAttribute('max', today);
+    var today = new Date();
+    var dd = today.getDate();
+    var mm = today.getMonth() + 1; //January is 0!
+    var yyyy = today.getFullYear();
+
+    if (dd < 10) {
+    dd = '0' + dd;
+    }
+
+    if (mm < 10) {
+    mm = '0' + mm;
+    } 
+        
+    today = yyyy + '-' + mm + '-' + dd;
+    document.getElementById("start_time").setAttribute("max", today);
 </script>
 
 <%- include('navbar') -%>
