--- a/views/user_addTask.ejs
+++ b/views/user_addTask.ejs
@@ -52,7 +52,7 @@
                 </div>
                 <div class="from-group">
                     <label for="start_time" ></label>
-                    <input type="datetime-local" name="start_time" class="form-control" id="start_time"  required>
+                    <input type="datetime-local" name="start_time" class="form-control" id="start_time" max="10-10-2022" required>
                 </div>
                 <div class="from-group">
                     <label for="time_taken" ></label>
